--- a/style.css
+++ b/style.css
@@ -16,7 +16,34 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background: black; 
 } */
-/* --- TOPO (HEADER) --- */
+/* --- TOPO (HEADER) e logos e imagens --- */
+
+.logo-placeholder {
+    width: 60px;              /* ajuste o tamanho */
+    height: 60px;
+    background-image: url("favicon/logo.png");
+    background-size: contain; /* ajusta ao espaço */
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.icons img {
+    width: 22px;
+    height: 20px;
+    object-fit: contain;
+}
+
+.icons button {
+    background: #ffffff;
+    padding: 8px;
+    border-radius: 10%;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 9px;
+    cursor: pointer;
+}
 
 .topo {
     background: black;
@@ -49,17 +76,20 @@ body {
 
 /* NOVO: Estilo para o Logo */
 .logo-placeholder {
-    width: 40px;
-    height: 40px;
-    background-color: white; 
-    color: black;
+    width: 55px;
+    height: 55px;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-weight: bold;
-    font-size: 0.7em;
-    flex-shrink: 0; 
+    flex-shrink: 0;
 }
+
+.logo-placeholder img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
 
 /* Campo de Busca (Wrapper) - CORREÇÃO DE CENTRALIZAÇÃO */
 .barra-busca-wrapper {
@@ -125,11 +155,6 @@ body {
     min-height: 250px; 
 }
 
-/* mantém o padrão */
-.carrossel-wrapper {
-  padding: 30px 0;
-}
-
 /* mira o primeiro section.linha-produtos na página e altera só o carrossel dentro dele */
 .linha-produtos:nth-of-type(1) .carrossel-wrapper {
   padding-top: 70px;
@@ -143,13 +168,18 @@ body {
     background: #FF5733;
     width: 100%;
     box-sizing: border-box;
-    position: relative; 
-    padding: 10px 0; /* ZERO nas laterais */
+    position: relative;
     
+    /* deixe somente UM padding base */
+    padding: 30px 0;
+
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
+
+
+
 
 /* A seta em si */
 /* A seta em si (regras gerais) */
